--- a/TM.Wedding.UI/tm-wedding-ui/package.json
+++ b/TM.Wedding.UI/tm-wedding-ui/package.json
@@ -10,7 +10,6 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^3.0.0-beta.0",
     "@angular/animations": "^16.2.5",
     "@angular/cdk": "^16.2.4",
     "@angular/common": "^16.2.0",
@@ -21,6 +20,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@emailjs/browser": "^3.11.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.0",
