--- a/TM.Wedding.UI/tm-wedding-ui/package.json
+++ b/TM.Wedding.UI/tm-wedding-ui/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.0",
+    "ngx-spinner": "^16.0.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
